@@ -184,42 +184,36 @@
       </plugin>
     </plugins>
   </build>
-
   <profiles>
     <profile>
-      <id>download-server</id>
+      <id>provision-test-eap</id>
       <activation>
-        <property>
-          <name>eap.zip.url</name>
-        </property>
+        <property><name>!skipTests</name></property>
       </activation>
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-antrun-plugin</artifactId>
+            <groupId>org.jboss.eap.plugins</groupId>
+            <artifactId>eap-maven-plugin</artifactId>
             <executions>
               <execution>
-                <id>download-and-extract-eap-server</id>
-                <goals>
-                  <goal>run</goal>
-                </goals>
                 <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>package</goal>
+                </goals>
+                <!-- Layers, excluded layers and scripts are inherited from parent plugin config -->
                 <configuration>
-                  <target>
-                    <!-- If JBOSS_HOME is set it causes obscure errors with CLI in -->
-                    <!-- jboss-as-maven-plugin. -->
-                    <property environment="env" />
-                    <fail message="JBOSS_HOME must not be set" if="env.JBOSS_HOME" />
-
-                    <echo>Preparing EAP application server</echo>
-                    <echo>EAP URL ${eap.zip.url}</echo>
-                    <fail message="Please specify EAP zip file URL via: -Deap.zip.url=" unless="eap.zip.url" />
-                    <mkdir dir="${test.server.unpack.dir}" />
-                    <get usetimestamp="true" src="${eap.zip.url}" skipexisting="true" dest="${test.server.unpack.dir}/${app.server}-${jboss.version}.zip" />
-                    <unzip src="${test.server.unpack.dir}/${app.server}-${jboss.version}.zip" dest="${test.server.unpack.dir}/" overwrite="true" />
-
-                  </target>
+                  <layers combine.children="append">
+                    <layer>h2-driver</layer>
+                  </layers>
+                  <packaging-scripts>
+                    <packaging-script>
+                      <scripts combine.children="append">
+                        <script>../eap-scripts/inmemory-h2db.cli</script>
+                      </scripts>
+                    </packaging-script>
+                  </packaging-scripts>
+                  <skipDeployment>true</skipDeployment>
                 </configuration>
               </execution>
             </executions>
@@ -227,141 +221,5 @@
         </plugins>
       </build>
     </profile>
-
-    <profile>
-      <id>configure-test-container</id>
-      <activation>
-        <property>
-          <name>eap.zip.url</name>
-        </property>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.hsqldb</groupId>
-          <artifactId>hsqldb</artifactId>
-          <scope>test</scope>
-          <classifier>debug</classifier>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.wildfly.plugins</groupId>
-            <artifactId>wildfly-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>start-server</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>start</goal>
-                </goals>
-                <configuration>
-                  <jbossHome>${test.server.build.dir}</jbossHome>
-                  <java-opts>
-                    <java-opt>--add-modules=java.se</java-opt>
-                  </java-opts>
-                </configuration>
-              </execution>
-              <execution>
-                <id>deploy-hsql-jdbc-driver</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>deploy-artifact</goal>
-                </goals>
-                <configuration>
-                  <groupId>org.hsqldb</groupId>
-                  <artifactId>hsqldb</artifactId>
-                  <classifier>debug</classifier>
-                </configuration>
-              </execution>
-              <execution>
-                <id>add-hsql-datasource</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>add-resource</goal>
-                </goals>
-                <configuration>
-                  <address>subsystem=datasources,data-source=java:jboss/datasources/NewcastleTestDS</address>
-                  <resources>
-                    <resource>
-                      <properties>
-                        <jndi-name>java:jboss/datasources/NewcastleTestDS</jndi-name>
-                        <enabled>true</enabled>
-                        <connection-url>jdbc:hsqldb:mem:newcastletestmemdb</connection-url>
-                        <driver-class>org.hsqldb.jdbc.JDBCDriver</driver-class>
-                        <driver-name>hsqldb-2.7.1-debug.jar</driver-name>
-                        <user-name>sa</user-name>
-                        <password>sa</password>
-                      </properties>
-                    </resource>
-                  </resources>
-                </configuration>
-              </execution>
-              <execution>
-                <id>change-logging-level</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>execute-commands</goal>
-                </goals>
-                <configuration>
-                  <execute-commands>
-<!--                    <batch>true</batch>/-->
-                    <commands>
-                      <command>
-                        /subsystem=logging/logger=org.jboss.pnc:add
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=org.jboss.pnc:change-log-level(level=DEBUG)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=org:add(level=INFO)
-                      </command>
-                      <command>
-                        /subsystem=logging/console-handler=CONSOLE:change-log-level(level=TRACE)
-                      </command>
-                      <command>
-                        /subsystem=logging/root-logger=ROOT:change-root-log-level(level=TRACE)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=org.jboss.pnc.datastore:add(level=TRACE)
-                      </command>
-                      <command>
-                        /extension=org.wildfly.extension.microprofile.config-smallrye:add
-                      </command>
-                      <command>
-                        /subsystem=microprofile-config-smallrye:add
-                      </command>
-                      <command>
-                        /extension=org.wildfly.extension.microprofile.fault-tolerance-smallrye:add
-                      </command>
-                      <command>
-                        /subsystem=microprofile-fault-tolerance-smallrye:add
-                      </command>
-                      <!--command>
-                        /subsystem=logging/logger=org.hibernate:add(level=DEBUG)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=org.hibernate.type:add(level=TRACE)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=org.jboss:add(level=DEBUG)
-                      </command-->
-                    </commands>
-                  </execute-commands>
-                </configuration>
-              </execution>
-              <execution>
-                <id>shutdown-server</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>shutdown</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
   </profiles>
 </project>
