@@ -240,7 +240,7 @@
           <excludedGroups>org.jboss.pnc.test.category.DebugTest</excludedGroups>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <systemPropertyVariables>
-            <pnc-config-path>${test.server.unpack.dir}/${app.server}-${jboss.version}/pnc-config.json</pnc-config-path>
+            <pnc-config-path>${test.server.build.dir}/pnc-config.json</pnc-config-path>
           </systemPropertyVariables>
         </configuration>
       </plugin>
@@ -282,70 +282,10 @@
     </profile>
 
     <profile>
-      <id>download-server</id>
+      <id>provision-test-eap</id>
       <activation>
-        <property>
-          <name>eap.zip.url</name>
-        </property>
+        <property><name>!skipTests</name></property>
       </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>download-and-extract-eap-server</id>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-                <phase>pre-integration-test</phase>
-                <configuration>
-                  <target>
-                    <!-- If JBOSS_HOME is set it causes obscure errors with CLI in -->
-                    <!-- wildfly-maven-plugin. -->
-                    <property environment="env" />
-                    <fail message="JBOSS_HOME must not be set" if="env.JBOSS_HOME" />
-
-                    <echo>Preparing EAP application server</echo>
-                    <echo>EAP URL ${eap.zip.url}</echo>
-                    <fail message="Please specify EAP zip file URL via: -Deap.zip.url=" unless="eap.zip.url" />
-                    <mkdir dir="${test.server.unpack.dir}" />
-                    <get usetimestamp="true" src="${eap.zip.url}" skipexisting="true" dest="${test.server.unpack.dir}/${app.server}-${jboss.version}.zip" />
-                    <unzip src="${test.server.unpack.dir}/${app.server}-${jboss.version}.zip" dest="${test.server.unpack.dir}/" overwrite="true" />
-
-                    <get usetimestamp="true" src="${eap-sso-adapter.url}" skipexisting="true" dest="${test.server.unpack.dir}/rh-sso-7.6.1-eap7-adapter-dist.zip" />
-                    <!-- variable in the path -->
-                    <unzip src="${test.server.unpack.dir}/rh-sso-7.6.1-eap7-adapter-dist.zip" dest="${test.server.unpack.dir}/jboss-eap-7.4/" overwrite="true" />
-
-                    <copy file="src/test/resources/pnc-config.json" tofile="${test.server.unpack.dir}/${app.server}-${jboss.version}/pnc-config.json" />
-                    <replace file="${test.server.unpack.dir}/${app.server}-${jboss.version}/pnc-config.json" propertyFile="${basedir}/target/test.properties">
-                      <replaceFilter token="@keycloakPort@" property="keycloakPort" />
-                    </replace>
-                  </target>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <id>configure-test-container</id>
-      <activation>
-        <property>
-          <name>eap.zip.url</name>
-        </property>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.hsqldb</groupId>
-          <artifactId>hsqldb</artifactId>
-          <scope>compile</scope>
-          <classifier>debug</classifier>
-        </dependency>
-      </dependencies>
       <build>
         <plugins>
           <plugin>
@@ -385,154 +325,64 @@
             </executions>
           </plugin>
           <plugin>
-            <groupId>org.wildfly.plugins</groupId>
-            <artifactId>wildfly-maven-plugin</artifactId>
+            <groupId>org.jboss.eap.plugins</groupId>
+            <artifactId>eap-maven-plugin</artifactId>
             <executions>
               <execution>
-                <id>start-server</id>
                 <phase>pre-integration-test</phase>
                 <goals>
-                  <goal>start</goal>
+                  <goal>package</goal>
                 </goals>
-                <configuration>
-                  <jbossHome>${test.server.build.dir}</jbossHome>
-                  <java-opts>
-                    <java-opt>--add-modules=java.se</java-opt>
-                  </java-opts>
-                </configuration>
               </execution>
-              <!-- HSQLDB JDBC driver installation and datasource configuration -->
+            </executions>
+            <!-- Layers, excluded layers and scripts are inherited from parent's plugin config -->
+            <configuration>
+              <layers combine.children="append">
+                <layer>h2-driver</layer>
+                <layer>keycloak-client-oidc</layer>
+              </layers>
+              <packaging-scripts>
+                <packaging-script>
+                  <scripts combine.children="append">
+                    <script>../eap-scripts/inmemory-h2db.cli</script>
+                  </scripts>
+                </packaging-script>
+                <packaging-script>
+                  <scripts>
+                    <script>../eap-scripts/configure-keycloak-auth.cli</script>
+                  </scripts>
+                  <properties-files>
+                    <property-file>${basedir}/target/test.properties</property-file>
+                  </properties-files>
+                  <resolve-expressions>true</resolve-expressions>
+                </packaging-script>
+              </packaging-scripts>
+              <skipDeployment>true</skipDeployment>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
               <execution>
-                <id>deploy-hsql-jdbc-driver</id>
-                <phase>pre-integration-test</phase>
+                <id>add-pnc-config</id>
                 <goals>
-                  <goal>deploy-artifact</goal>
+                  <goal>run</goal>
                 </goals>
+                <phase>pre-integration-test</phase>
                 <configuration>
-                  <groupId>org.hsqldb</groupId>
-                  <artifactId>hsqldb</artifactId>
-                  <classifier>debug</classifier>
+                  <target>
+                    <copy file="src/test/resources/pnc-config.json" tofile="${test.server.build.dir}/pnc-config.json" />
+                    <replace file="${test.server.build.dir}/pnc-config.json" propertyFile="${basedir}/target/test.properties">
+                      <replaceFilter token="@keycloakPort@" property="keycloakPort" />
+                    </replace>
+                  </target>
                 </configuration>
-              </execution>
-              <execution>
-                <id>add-hsql-datasource</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>add-resource</goal>
-                </goals>
-                <configuration>
-                  <address>subsystem=datasources,data-source=java:jboss/datasources/NewcastleTestDS</address>
-                  <resources>
-                    <resource>
-                      <properties>
-                        <jndi-name>java:jboss/datasources/NewcastleTestDS</jndi-name>
-                        <enabled>true</enabled>
-                        <connection-url>jdbc:hsqldb:mem:newcastletestmemdb</connection-url>
-                        <driver-class>org.hsqldb.jdbc.JDBCDriver</driver-class>
-                        <driver-name>hsqldb-2.7.1-debug.jar</driver-name>
-                        <user-name>sa</user-name>
-                        <password>sa</password>
-                      </properties>
-                    </resource>
-                  </resources>
-                </configuration>
-              </execution>
-              <!-- End HSQLDB configuraiton -->
-              <execution>
-                <id>change-logging-level</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>execute-commands</goal>
-                </goals>
-                <configuration>
-                  <execute-commands>
-<!--                    <batch>true</batch>-->
-                    <commands>
-                      <command>
-                        /subsystem=logging/logger=org:add(level=INFO)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=io:add(level=INFO)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=javax:add(level=INFO)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=org.jboss.pnc:add(level=DEBUG)
-                      </command>
-                      <command>
-                        /subsystem=logging/console-handler=CONSOLE:change-log-level(level=DEBUG)
-                      </command>
-                      <command>
-                        /subsystem=logging/root-logger=ROOT:change-root-log-level(level=DEBUG)
-                      </command>
-
-                      <!-- Add microprofile stuff -->
-                      <command>
-                        /extension=org.wildfly.extension.microprofile.config-smallrye:add
-                      </command>
-                      <command>
-                        /subsystem=microprofile-config-smallrye:add
-                      </command>
-                      <command>
-                        /extension=org.wildfly.extension.microprofile.fault-tolerance-smallrye:add
-                      </command>
-                      <command>
-                        /subsystem=microprofile-fault-tolerance-smallrye:add
-                      </command>
-                      <command>
-                        /extension=org.wildfly.extension.microprofile.metrics-smallrye:add
-                      </command>
-                      <command>
-                        /subsystem=microprofile-metrics-smallrye:add
-                      </command>
-                      <!--log sql queries and parameter bindings-->
-                      <!--command>
-                        /subsystem=logging/logger=org.hibernate.SQL:add(level=DEBUG)
-                      </command>
-                      <command>
-                        /subsystem=logging/logger=org.hibernate.type:add(level=TRACE)
-                      </command-->
-                      <command>
-                        /subsystem=security/security-domain=keycloak/:add
-                      </command>
-                      <command>
-                        /subsystem=security/security-domain=keycloak/authentication=classic/:add(login-modules=[{ "code" =&gt; "org.keycloak.adapters.jboss.KeycloakLoginModule","flag" =&gt; "required"}])
-                      </command>
-                      <command>
-                        /extension=org.keycloak.keycloak-adapter-subsystem/:add(module=org.keycloak.keycloak-adapter-subsystem)
-                      </command>
-                      <command>
-                        /subsystem=keycloak:add
-                      </command>
-                      <!--command>
-                        /subsystem=keycloak/realm=newcastle-testcontainer:add(realm-public-key="MIIBIjAN...", auth-server-url=" ", ssl-required="none", disable-trust-manager="true")
-                      </command-->
-                      <command> <!-- TODO realm-public-key. Do we need it ? -->
-                        /subsystem=keycloak/realm=newcastle-testcontainer:add(auth-server-url="http://localhost:${keycloakPort}", ssl-required="none", disable-trust-manager="true")
-                      </command>
-                      <command>
-                        /subsystem=keycloak/secure-deployment=rest.war:add(realm="newcastle-testcontainer", resource="pnc", public-client="true", bearer-only="true")
-                      </command>
-                      <command>
-                        /subsystem=ee:write-attribute(name="global-modules",value=[{"name" =&gt; "org.keycloak.keycloak-core","slot" =&gt; "main"}])
-                      </command>
-                    </commands>
-                  </execute-commands>
-                </configuration>
-              </execution>
-              <execution>
-                <id>shutdown-server</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>shutdown</goal>
-                </goals>
               </execution>
             </executions>
           </plugin>
         </plugins>
       </build>
     </profile>
-
   </profiles>
 </project>
